--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,1 +1,14 @@
-
+<!doctype html>
+<html>
+  <head>
+    <meta charset = "utf-8">
+    <meta name = "viewport" content = "width=device-width, initial-scale = "1"> <!-- turn off mobile zooming -->
+    <link rel="stylesheet" href = "style.css">
+    <title></title>
+  </head>
+  <body>
+    <div></div>
+    <div></div>
+    <div></div>
+  </body>
+</html>
