--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html">
+<meta http-equiv="refresh" content="0; url=https://deedee397.github.io/Coursera_html_css_javascript/mod2_solution/index.html">
