--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -4,33 +4,30 @@
     <meta charset = "utf-8">
     <meta name = "viewport" content = "width=device-width, initial-scale = "1"> <!-- turn off mobile zooming -->
     <link rel="stylesheet" href = "css/style.css">
-    <title></title>
+    <title>Assignment Solution for Module 2</title>
   </head>
   <body>
-    <div>
-        <div class = "title_region">
-             <div>Chicken</div>
-             <p>The chicken (Gallus domesticus) is a domesticated subspecies of the red junglefowl, 
-                 with attributes of wild species such as grey and ceylon junglefowl[1] that are originally from 
-                 Southeastern Asia. Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel.
-                 A male that has been castrated is a capon. 
-                 An adult female bird is called a hen and a sexually immature female is called a pullet.</p>
-        </div>
-        <div class = "title_region">
-             <div>Beef</div>
-             <p>
-About sushi, I could say that it is as healthy and tasty as the two dishes above. Contains rice and fish, vegetables and sauces. 
-Sometimes it is wrapped in some seaweed leaves, which makes it very tasty and good looking. If you want to make sushi at home, 
-you should know that the first time it may not turn out very well and you will be surprised to see that it can look like a potato, 
-                                   but do not be disappointed, you have to persevere.</p>
-        </div>
-        <div class = "title_region">
-             <div>Sushi</div>
-             <p>The chicken (Gallus domesticus) is a domesticated subspecies of the red junglefowl, 
-                 with attributes of wild species such as grey and ceylon junglefowl[1] that are originally from 
-                 Southeastern Asia. Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel.
-                 A male that has been castrated is a capon. 
-                 An adult female bird is called a hen and a sexually immature female is called a pullet.</p>
-        </div>
+  
+	<h1>Our menu</h1>
+  
+    <div class="columns">
+        <div class = "title_region first">Chicken</div>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor lacinia ultrices. Cras accumsan finibus risus, vitae faucibus nulla tincidunt at. Phasellus fringilla lacus eget porta semper. Mauris accumsan nulla nisl, id laoreet elit interdum sit amet. Sed vitae malesuada nisi. Curabitur pellentesque rhoncus mi ac volutpat. In hac habitasse platea dictumst.</p>
+		</div>
+	</div>
+
+    <div class="columns">
+        <div class = "title_region second">Beef</div>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor lacinia ultrices. Cras accumsan finibus risus, vitae faucibus nulla tincidunt at. Phasellus fringilla lacus eget porta semper. Mauris accumsan nulla nisl, id laoreet elit interdum sit amet. Sed vitae malesuada nisi. Curabitur pellentesque rhoncus mi ac volutpat. In hac habitasse platea dictumst.</p>
+		</div>
+	</div>
+	
+    <div class="columns">
+        <div class = "title_region third">Sushi</div>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor lacinia ultrices. Cras accumsan finibus risus, vitae faucibus nulla tincidunt at. Phasellus fringilla lacus eget porta semper. Mauris accumsan nulla nisl, id laoreet elit interdum sit amet. Sed vitae malesuada nisi. Curabitur pellentesque rhoncus mi ac volutpat. In hac habitasse platea dictumst.</p>
+		</div>
+	</div>
+	
+	
   </body>
 </html>
