--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -12,13 +12,69 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Bootstrap Starter Page</title>
+    <title>Assignment Solution for Module 3</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
 
-  <h1>Hello Coursera!</h1>
+	<header>
+		<nav id="header-nav" class="navbar navbar-default">
+			<div class="container">
+				<a href="#" class="pull-left">
+					<div id="logo-img">Food, LLC</div>
+				</a>
+			</div>
+			
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			
+			<!-- meniul responsive -->
+			<div id="collapsable-nav" class="collapse navbar-collapse">
+				<ul id="nav-list" class="nav navbar-nav navbar-right  hidden-ls hidden-md visible-xs">
+					<li>
+						<a href="#">Chicken</a>
+					</li>
+					<hr>
+					<li>
+						<a href="#">Beef</a>
+					</li>
+					<hr>
+					<li>
+						<a href="#">Sushi</a>
+					</li>					
+				</ul>
+			</div> <!-- .collapse .navbar-collapse -->
+			
+		</nav>
+	</header>
+
+	<div id="main-content" class = "container">
+	<h1>Our menu</h1>
+  
+    <div class="columns first_col">
+        <div class = "title_region first">Chicken</div>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor lacinia ultrices. Cras accumsan finibus risus, vitae faucibus nulla tincidunt at. Phasellus fringilla lacus eget porta semper. Mauris accumsan nulla nisl, id laoreet elit interdum sit amet. Sed vitae malesuada nisi. Curabitur pellentesque rhoncus mi ac volutpat. In hac habitasse platea dictumst.</p>
+	</div>
+
+
+    <div class="columns second_col">
+        <div class = "title_region second">Beef</div>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor lacinia ultrices. Cras accumsan finibus risus, vitae faucibus nulla tincidunt at. Phasellus fringilla lacus eget porta semper. Mauris accumsan nulla nisl, id laoreet elit interdum sit amet. Sed vitae malesuada nisi. Curabitur pellentesque rhoncus mi ac volutpat. In hac habitasse platea dictumst.</p>
+	</div>
+
+	   
+    <div class="columns third_col">
+        <div class = "title_region third">Sushi</div>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tempor lacinia ultrices. Cras accumsan finibus risus, vitae faucibus nulla tincidunt at. Phasellus fringilla lacus eget porta semper. Mauris accumsan nulla nisl, id laoreet elit interdum sit amet. Sed vitae malesuada nisi. Curabitur pellentesque rhoncus mi ac volutpat. In hac habitasse platea dictumst.</p>
+	</div>
+
+	
+	</div>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
